fix the alignment of the grids

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -144,7 +144,7 @@ main p {
         "box-1 box-3"
     ;
     gap: 1em;
-    justify-content: center;
+    align-items: center;
 }
 
 .container {
